# Transient_Cytokinin_Responses

./: CMakeLists.txt  LICENSE  README.md
Visualization/: Cytokinin_Plot.ipynb
include/: DifferentialEquation.h  difAve.h  readCSV.h  stdafx.h
src/: DifferentialEquation.cpp  difAve.cpp  main.cpp  readCSV.cpp
